package com.itbird.design.principle.mvp.v1;

/**
 * 自定义MVP框架，BaseView
 * Created by itbird on 2022/2/25
 */
public interface IView {
}
